# booking-api

./: .dockerignore  .gitignore  Dockerfile  app.py  entrypoint.sh  pyproject.toml  readme.MD  requirements.txt
bookingapp/: __init__.py  config.py  schemas.py
bookingapp/models/: __init__.py  booking.py  item.py  user.py
bookingapp/resources/: __init__.py  booking.py  item.py  user.py
