[project]
name = "bookingapp"
version = "1.0.0"
description = "Basic booking app"
dependencies = [
    "flask",
    "flask-smorest",
    "python-dotenv",
    "marshmallow",
    "sqlalchemy",
    "flask-sqlalchemy",
    "pymysql",
    "gunicorn",
    "werkzeug",
    "Flask-Migrate"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"